--- a/gallery.html
+++ b/gallery.html
@@ -44,9 +44,79 @@
           <div class="desc">Visiting Kalaupapa</div>
         </div>
       </div>
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/Auntie.jpeg" alt="Auntie" width="600" height="400">
+          </a>
+          <div class="desc">Drinking tea with an Auntie</div>
+        </div>
+      </div>
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/Colorado.jpeg" alt="Colorful Colorado" width="600" height="400">
+          </a>
+          <div class="desc">Roadtripping through Colorado</div>
+        </div>
+      </div>
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/Wildflower.jpeg" alt="Dandelion" width="600" height="400">
+          </a>
+          <div class="desc">Making wishes on Dandelions</div>
+        </div>
       
+      </div>
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/Skilift.jpeg" alt="Skilift" width="600" height="400">
+          </a>
+          <div class="desc">Riding the Skilift in Colorado</div>
+        </div>
+      </div>
+
       <div class="clearfix"></div>
-      
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/llamafarm.jpeg" alt="llamafarm" width="600" height="400">
+          </a>
+          <div class="desc">Visiting our family llama farm in Colorado</div>
+        </div>
+      </div>
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/flagstaff.jpeg" alt="Sunset" width="600" height="400">
+          </a>
+          <div class="desc">Rodeo and Sunset in Flagstaff</div>
+        </div>
+      </div>
+
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/moon.jpeg" alt="moon and trees" width="600" height="400">
+          </a>
+          <div class="desc">Moon and Trees in Hawaii</div>
+        </div>
+      </div>
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank">
+            <img src="/public/dolphins.jpeg" alt="dolphins" width="600" height="400">
+          </a>
+          <div class="desc">Swimming with Dolphins</div>
+        </div>
+      </div>
       <div style="padding:6px;">
     <h1>gallery
     </h1>
