--- a/stories.html
+++ b/stories.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: black;">
+<html lang="en">
+  <link rel="stylesheet" href="project.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
