added get requests

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -23,7 +23,8 @@
             <input type="email" id="mail" name="user_email">
           </li>
 
-        <div id="animal">
+          <fieldset id="group1">
+        <div id="animal"> 
           <p>Choose your spirit animal:</p>
             <label for="animal"></label>
             <div>
@@ -48,7 +49,9 @@
               </div>
 
             </div>
+          </fieldset>
 
+          <fieldset id="group2">
             <div id="creature">
               <p>Choose which creature best represents your character:</p>
               <label for="animal"></label>
@@ -73,8 +76,9 @@
                   <label for="wizard">Wizard</label>
                 </div>
             </div>
+          </fieldset>
 
-            
+            <fieldset id="group3">
             <div id="color">
               <p>Choose which color best represents your personality:</p>
                 <label for="animal"></label>
@@ -99,6 +103,7 @@
                     <label for="red">Red</label>
                   </div>
                 </div>
+              </fieldset>
 <br>                
                     <button id="form_button" type="submit">Find your dream desitation</button>
 
