--- a/project.html
+++ b/project.html
@@ -14,11 +14,11 @@
     <div class="header"> DISCOVER
         <nav>
             <ol>
-                <button id="visited"<li><a href="./visited.html">visited</a></li></button>
-               <button id="unvisited"<li><a href="./unvisited.html">unvisited</a></li></button>
-               <button id="bucketlist"<li><a href="./bucketlist.html">bucketlist</a></li></button>
-               <button id="stories"<li><a href="./stories.html">stories</a></li></button>
-               <button id="gallery"<li><a href="./gallery.html">gallery</a></li></button>
+                <button id="visited"<li><a href="/visited">visited</a></li></button>
+               <button id="unvisited"<li><a href="/unvisited">unvisited</a></li></button>
+               <button id="bucketlist"<li><a href="/bucketlist">bucketlist</a></li></button>
+               <button id="stories"<li><a href="/stories">stories</a></li></button>
+               <button id="gallery"<li><a href="/gallery">gallery</a></li></button>
             </ol>
         </nav>
     </div>
