script first attempt

--- a/bucketlist.html
+++ b/bucketlist.html
@@ -135,7 +135,8 @@
         color: colorInput.value,
        }
       console.log(body)
-      axios.post('/api/bucketlist-form', body)//.then()
+      axios.post('/api/bucketlist-form', body)
+      .then
     });
 
 
