--- a/unvisited.html
+++ b/unvisited.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
-    <header id="unvisited_header">Places To Go</header>
+  <div id="visited_header">
+    <h1>PLACES TO GO</h1>
+  </div>
     <div class="row">
         <div class="image">
             <div id="spain_text"><h2> Salamanca, Spain</h2 ></div>
