adding divs and a tags, formatting htmls

--- a/stories.html
+++ b/stories.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="project.css">
+<link rel="stylesheet" href="project.css">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 
 <style>
@@ -14,70 +15,87 @@
   }
 
   .story_image {
-    width:1680px;
+    width: 1680px;
   }
+
   .story_text {
-    position: static ;
-    text-align: justify ;
-  bottom: 20px;
-  right: 20px;
-  background-color: black;
-  color: white;
-  padding-left: 2px;
-  padding-right: 1100px;
+    position: static;
+    text-align: justify;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 2px;
+    padding-right: 1100px;
   }
 </style>
+
 <body>
-    <div class="story_container">
+  <div class="story_container">
     <div class="story_image">
-        <img src="/public/beach.jpeg" alt="Cycling" width="40%">
+      <img src="/public/beach.jpeg" alt="Cycling" width="40%">
     </div>
     <div class="story_text">
-        <h1 style="color: white;">Cycling in Raratonga</h1>
-        <h4 style="color: white">My time spent in Raratonga opened my eyes and mind. The experiences ranges from
-        learning culturally about different practices and people and the lifestyles caused me 
-        to change my outlook on what goals I would set for my life.The idea of success slowly 
-        faded away as a priority and the ideas of connection and peace slowly worked their way 
-        into my mind as priorities or simply options for priorities. I began to realize the 
-        fulfillment of my life was not limited by my abilities as much as the perspectives I held towards it.  </h4>
+      <h1 style="color: white;">Cycling in Raratonga</h1>
+      <h4 style="color: white">My time spent in Raratonga opened my eyes and mind. The experiences ranges from
+        learning culturally about different practices and people and the lifestyles caused me
+        to change my outlook on what goals I would set for my life.The idea of success slowly
+        faded away as a priority and the ideas of connection and peace slowly worked their way
+        into my mind as priorities or simply options for priorities. I began to realize the
+        fulfillment of my life was not limited by my abilities as much as the perspectives I held towards it. </h4>
     </div>
-</div>
+  </div>
 
 
   <div class="story_container">
-  <div class="story_image">
+    <div class="story_image">
       <img src="/public/Auntie.jpeg" alt="Auntie" width="40%">
-  </div>
-  <div class="story_text">
+    </div>
+    <div class="story_text">
       <h1 style="color: white;">Finding New Family</h1>
       <h4 style="color: white">Raratonga was full of flavorful fruit, endless papayas,chickens,
-         coconut trees and mosquitos. Regardless of the many months I spent sleep deprived on the island I could always justify staying because
-        of the overwhelming amount of love I felt and the open heartedness of all the people I met. To be accepted and loved and welcomed into someone home 
-      right away felt so different from the customs I gre up with in the US but all at the same time it felt more familiar and more like me. I never imagined
-    that being so far away from the place that had been my home would finally lead me to understand the meaning of home itself. AUnties who make you homemade fruitcakes and 
-  invite you over just to have tea, fishermen and local marine biologist without hesitation inviting you to be a part of every celebration and event. I felt like 
-I had felt the feeling I had always hoped to experience with family for the first time. </h4>
+        coconut trees and mosquitos. Regardless of the many months I spent sleep deprived on the island I could always
+        justify staying because
+        of the overwhelming amount of love I felt and the open heartedness of all the people I met. To be accepted and
+        loved and welcomed into someone home
+        right away felt so different from the customs I gre up with in the US but all at the same time it felt more
+        familiar and more like me. I never imagined
+        that being so far away from the place that had been my home would finally lead me to understand the meaning of
+        home itself. AUnties who make you homemade fruitcakes and
+        invite you over just to have tea, fishermen and local marine biologist without hesitation inviting you to be a
+        part of every celebration and event. I felt like
+        I had felt the feeling I had always hoped to experience with family for the first time. </h4>
+    </div>
   </div>
-</div>
-    
-<div class="story_container">
-  <div class="story_image">
+
+  <div class="story_container">
+    <div class="story_image">
       <img src="/public/dolphins.jpeg" alt="Dolphins" width="40%">
-  </div>
-  <div class="story_text">
+    </div>
+    <div class="story_text">
       <h1 style="color: white;">Swimming with Dolphins</h1>
-      <h4 style="color: white">Living in Hawaii on my own caused me to feel connection to the earth and nature in a way I had never experienced. I was changing
-      so fast but at the same time growing into who I had always been. The weather never skipped on an opportunity to help me acknowledge the beauty the earth had to offer
-    and to leave me absolutely in awe with what I was able to observe wiht my own eyes. On a random weekend for a birthday of a friend we spent the night camping
-  on the beach when it started to rain but we merely covered our faces and slept through it. In the early morning we woke up to find some of our belongings missing
-including my phone which had been inches away from my face. We dismissed it and went out on our adventure to swim and snorkel with the dolphins. The cool but chill air
-is somehting I can still feel having nothing other than a towl and a wet swimsuit. My ankles sore from running left me without the strength to maneuver my flippers
-and carried me out in a wave but when you are 19 dying isn't quite as much of a concern as is missing out on seeing dolphins. The experience overall was deserving of more
-than what I can put in words and the threatening phone call from the person who stole my phone as we arrived home couldn't shake my euphoria from the experience.
-Was the realization of some unknown person snagging my ohone from inches away form my body as I laid dead asleep horrifying to realize? Yes, of course. But that is a story for another time.  </h4>
+      <h4 style="color: white">Living in Hawaii on my own caused me to feel connection to the earth and nature in a way
+        I had never experienced. I was changing
+        so fast but at the same time growing into who I had always been. The weather never skipped on an opportunity to
+        help me acknowledge the beauty the earth had to offer
+        and to leave me absolutely in awe with what I was able to observe wiht my own eyes. On a random weekend for a
+        birthday of a friend we spent the night camping
+        on the beach when it started to rain but we merely covered our faces and slept through it. In the early morning
+        we woke up to find some of our belongings missing
+        including my phone which had been inches away from my face. We dismissed it and went out on our adventure to
+        swim and snorkel with the dolphins. The cool but chill air
+        is somehting I can still feel having nothing other than a towl and a wet swimsuit. My ankles sore from running
+        left me without the strength to maneuver my flippers
+        and carried me out in a wave but when you are 19 dying isn't quite as much of a concern as is missing out on
+        seeing dolphins. The experience overall was deserving of more
+        than what I can put in words and the threatening phone call from the person who stole my phone as we arrived
+        home couldn't shake my euphoria from the experience.
+        Was the realization of some unknown person snagging my ohone from inches away form my body as I laid dead asleep
+        horrifying to realize? Yes, of course. But that is a story for another time. </h4>
+    </div>
   </div>
-</div>
 
 
 </body>
+
 </html>
