--- a/project.html
+++ b/project.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="project.css">
 </head>
+
 <body>
 
 
     <div class="header"> DISCOVER
         <nav>
             <ol>
-                <button id="visited"<li><a href="/visited">visited</a></li></button>
-               <button id="unvisited"<li><a href="/unvisited">unvisited</a></li></button>
-               <button id="bucketlist"<li><a href="/bucketlist">bucketlist</a></li></button>
-               <button id="stories"<li><a href="/stories">stories</a></li></button>
-               <button id="gallery"<li><a href="/gallery">gallery</a></li></button>
+                <button id="visited" <li><a href="/visited">visited</a></li></button>
+                <button id="unvisited" <li><a href="/unvisited">unvisited</a></li></button>
+                <button id="bucketlist" <li><a href="/bucketlist">bucketlist</a></li></button>
+                <button id="stories" <li><a href="/stories">stories</a></li></button>
+                <button id="gallery" <li><a href="/gallery">gallery</a></li></button>
             </ol>
         </nav>
     </div>
 
     <div id="main_photo_home">
-        <img src="https://images.unsplash.com/photo-1526870916906-cb9e571f8c69?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWlycGxhbmUlMjB2aWV3fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="image loading">
+        <img src="https://images.unsplash.com/photo-1526870916906-cb9e571f8c69?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWlycGxhbmUlMjB2aWV3fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80"
+            alt="image loading">
     </div>
 
 
@@ -33,6 +36,5 @@
     <script src="visited.js"></script>
     <script src="unvisited.js"></script>
 </body>
+
 </html>
-
-
